# EasiFlux-Desktop-Tauri

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_dev.yml  feature_request.yml  feature_request_dev.yml
.github/workflows/: ci.yml  release-please.yml  release.yml  tauri-build-reusable.yml
docs/: UI_REFACTOR.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/api/: client.rs  diagnostic.rs  endpoints.rs  mapper.rs  mod.rs  private.rs  public.rs  response.rs
src-tauri/src/auth/: mod.rs  signer.rs  time_sync.rs
src-tauri/src/commands/: account.rs  app.rs  config.rs  connection.rs  diagnostic.rs  market.rs  mod.rs  trading.rs
src-tauri/src/events/: emitter.rs  mod.rs
src-tauri/src/models/: account.rs  api_requests.rs  config.rs  diagnostic.rs  market.rs  mod.rs  time.rs  trading.rs
src-tauri/src/plugin/: mod.rs
src-tauri/src/services/: account.rs  analytics.rs  connection.rs  daily_pnl.rs  market.rs  mod.rs  risk.rs  scheduler.rs  time.rs  trading.rs
src-tauri/src/storage/: cache.rs  config.rs  credentials.rs  kline_store.rs  mod.rs  risk_usage.rs  trade_log.rs
src-tauri/src/ws/: client.rs  manager.rs  messages.rs  mod.rs  topics.rs
src/composables/: easiKlineDatafeed.ts  useAsyncState.ts  useDashboardTickers.ts  useOrderCenterRefresh.ts  (+3 more)
(+118 files in other folders)
